NXP-16016: Fix alignment in action bars

--- a/nuxeo-features/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/themes/css/nuxeo_admincenter_specific.css
+++ b/nuxeo-features/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/themes/css/nuxeo_admincenter_specific.css
@@ -17,6 +17,7 @@ author: lkemen@nuxeo.com
 .actionBar h3 { padding: .3em 0 }
 .actionBar a {
   vertical-align: top }
+.actionBar label, .actionBar input[type="checkbox"] { vertical-align: middle }
 
 /* =Marketplace, Nuxeo Connect & Updates */
 .marketplace { background-color: #fbfbfb }
